--- a/async-part1/index.html
+++ b/async-part1/index.html
@@ -13,9 +13,13 @@
     <input type="text" id="quota" name="quota" value="1000000" />
 
     <button id="generate">Generate primes</button>
+    <button id="xhr">Click to start XMLHttp Request</button>
     <button id="reload">Reload</button>
 
     <div id="output"></div>
+
+    <pre readonly class="event-log"></pre>
+
     <script src="async-javascript-part1.js">
         
     </script>
