Change file name

--- a/async-part2/index.html
+++ b/async-part2/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="memes-container"></div>
-    <script src="example.js"></script>
+    <script src="fetch-example.js"></script>
 </body>
 </html>
